--- a/donutshop.css
+++ b/donutshop.css
@@ -23,6 +23,7 @@ section h1 {
 table {
   margin: 0 auto;
   margin-bottom: 90px;
+  width: 600px;
   background-color: #fff;
   border: 10px solid #7E8F7C;
   padding: 10px 15px 15px;
