--- a/donutshop.css
+++ b/donutshop.css
@@ -17,6 +17,16 @@ section h1 {
   border-bottom: 3px solid #3B3738;
   width: 500px;
   margin: 0 auto;
+  margin-bottom: 80px;
+  padding-bottom: 10px;
+}
+
+section h2 {
+  text-align: center;
+  font-family: 'Josefin Slab', serif;
+  border-bottom: 3px solid #3B3738;
+  width: 300px;
+  margin: 0 auto;
   margin-bottom: 50px;
   padding-bottom: 10px;
 }
@@ -31,13 +41,9 @@ table {
 th {
   background-color: #EEE; width: 200px;
   font-family: 'Poiret One', cursive;
-  text-decoration: underline;
 }
 
 td {
-  border-bottom: 1px solid #3B3738;
-}
-td + td {
   text-align: center;
   border-bottom: none;
 }
