--- a/donutshop.css
+++ b/donutshop.css
@@ -52,7 +52,8 @@ td {
 #logo {
   background-color: #3B3738;
   border: 1px solid #FDF3E7;
-  border-radius: 100%;
+  border-radius: 50%;
+  border-radiu
   height: 200px;
   width: 200px;
   position: relative;
