--- a/donutshop.css
+++ b/donutshop.css
@@ -30,6 +30,13 @@ section h2 {
   margin-bottom: 50px;
   padding-bottom: 10px;
 }
+
+input[type="number"] {
+  width: 30px;
+  background: #FDF3E7;
+  text-align: center;
+}
+
 table {
   margin: 0 auto;
   margin-bottom: 90px;
@@ -86,6 +93,16 @@ td {
   display: block;
 }
 
+#chartContainer {
+  width: 650px;
+  height: 300px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  border: 10px solid #7E8F7C;
+
+}
+
+
 form {
   text-align: center;
   margin: 0 auto;
@@ -107,4 +124,3 @@ footer {
   color: #3B3738;
   text-align: center;
 }
-
